--- a/templates/invalid.html
+++ b/templates/invalid.html
@@ -5,6 +5,7 @@ $def with (un)
 		<title>Test Page</title>
 	</head>
 	<body>
-		<h1>$un, you are not a valid user</h1>
+		<h2>$un, you are not a valid user</h2>
+		<h2><a href="/register">Click here to register</a></h2>
 	</body>
 </html>
