--- a/templates/register.html
+++ b/templates/register.html
@@ -3,12 +3,12 @@
 	<head>
 		<title>Test Page</title>
 		<link rel="icon" type="image/png" href="/static/images/favicon.ico" />
-		<link rel="stylesheet" type="text/css" href="/static/css/login.css" />
+		<link rel="stylesheet" type="text/css" href="/static/css/register.css" />
 	</head>
 	<body>
-		<form action="/" method="post">
+		<form action="/register" method="post">
 			<fieldset>
-				<legend>Login</legend>
+				<legend>Register</legend>
 				<table>
 					<tr>
 						<td>Username:</td>
@@ -20,11 +20,10 @@
 					</tr>
 					<tr>
 						<td></td>
-						<td><input type="submit" value="Login" /></td>
+						<td><input type="submit" value="Register" /></td>
 					</tr>
 				</table>
 			</fieldset>
 		</form>
-		<p>Or <a href="/register">Click here to register</a></p>
 	</body>
 </html>
