--- a/templates/valid.html
+++ b/templates/valid.html
@@ -3,6 +3,7 @@ $def with (un)
 <html>
 	<head>
 		<title>Test Page</title>
+		<link rel="icon" type="image/png" href="/static/images/favicon.ico" />
 	</head>
 	<body>
 		<h1>$un, you are a valid user</h1>
