--- a/templates/registered.html
+++ b/templates/registered.html
@@ -6,7 +6,7 @@ $def with (un)
 		<link rel="icon" type="image/png" href="/static/images/favicon.ico" />
 	</head>
 	<body>
-		<h2>$un, you are not a valid user</h2>
-		<h2><a href="/register">Click here to register</a></h2>
+		<h2>$un, you are registered</h2>
+		<h2>You may <a href="/">click here</a> to login</h2>
 	</body>
 </html>
