--- a/templates/login.html
+++ b/templates/login.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 		<form action="/" method="post">
+			<input type="hidden" name="csrf_token" value="$csrf_token()" />
 			<fieldset>
 				<legend>Login</legend>
 				<table>
