--- a/templates/register.html
+++ b/templates/register.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 		<form action="/register" method="post">
+			<input type="hidden" name="csrf_token" value="$csrf_token()" />
 			<fieldset>
 				<legend>Register</legend>
 				<table>
